Added background images to the second section of my second flex item in the main tag

--- a/project_13.css
+++ b/project_13.css
@@ -195,19 +195,38 @@ ul {
 }
 
 .fourth-text {
-    font-size: 0.9rem;
+    font-size: 1rem;
+    color: var(--second-color);
+    font-weight: 600;
 }
 
 .fourth-item-one,
 .fourth-item-two,
 .fourth-item-three {
-    width: 120px;
+    width: 200px;
 }
 
 .fourth-item-one {
     background-image: url(./Images/library_collection_Collection_Boundless_Disability_Employment_c297d236d9.png);
     height: 300px;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 200px ;
+    padding: 1.2rem;
+}
+
+.fourth-item-two {
+    background-image: url('./Images/library_collection_making_accessible_color_combos_42c8d90a99.png');
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 1.2rem;
+    background-color: var(--fifth-color);
+}
+
+.fourth-item-three {
+    background-image: url('./Images/library_collection_Inclusive_Social_Media_b9669e6d39.png');
+    /* height: 300px; */
+    background-repeat: no-repeat;
+    background-size: 200px;
     padding: 1.2rem;
 }
