Adjusted the width of the arrow-down icon and also centered it using align-items for flexbox in relation to the text in the li tag

--- a/project_13.css
+++ b/project_13.css
@@ -93,16 +93,16 @@ ul {
 .third-list-item {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
+
+
 
 .arrow-image {
     cursor: pointer;
+    width: 20px;
 }
 
-
-.third-list-item img {
-    width: 10px;
-}
 
 .mini-container-one {
     background:var(--sixth-color) ;
