Added a second class name to the down arrow icon and added a transform property to rotate the down arrow icon by 180 deg

--- a/project_13.css
+++ b/project_13.css
@@ -103,6 +103,10 @@ ul {
     width: 20px;
 }
 
+.arrow-image-open {
+    transform: rotate(180deg);
+}
+
 
 .mini-container-one {
     background:var(--sixth-color) ;
