--- a/project_13.css
+++ b/project_13.css
@@ -42,6 +42,7 @@ img {
 .first-image {
     width: 30px;
     border-radius: 30px;
+    cursor: pointer;
 }
 
 .mini-nav-bar-one,
@@ -55,7 +56,7 @@ img {
 .nav-item:hover {
     cursor: pointer;
     border: 2px solid var(--third-color);
-    padding: 5px 25px;
+    /* padding: 5px 25px; */
     border-radius: 3px;
 }
 
@@ -68,6 +69,7 @@ img {
     padding: 5px 20px;
     border-radius: 5px;
     letter-spacing: 1.2px;
+    cursor:pointer ;
 }
 
 .main-container {
@@ -79,7 +81,7 @@ img {
 }
 
 .container-one {
-    width: 400px;
+    width: 350px;
     font-weight: 600;
 }
 
