--- a/project_13.css
+++ b/project_13.css
@@ -35,8 +35,10 @@ img {
 .mini-nav-bar-one,
 .mini-nav-bar-two {
     display: flex;
-    gap: 80px;
+    /* gap: 80px; */
+    gap: 50px;
     margin: 0;
+    align-items: center;
 }
 
 .first-image {
@@ -56,7 +58,7 @@ img {
 .nav-item:hover {
     cursor: pointer;
     border: 2px solid var(--third-color);
-    /* padding: 5px 25px; */
+    padding: 5px 25px;
     border-radius: 3px;
 }
 
@@ -142,14 +144,16 @@ ul {
 
 .mini-container-one {
     background:var(--sixth-color) ;
-    padding: 0.9rem;
+    padding: 1.4rem;
     border-radius: 3px;
 }
 
 .item-one {
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: var(--second-color);
     margin: 0;
+    font-weight: 900;
+    letter-spacing: 1px;
 }
 
 .item-two {
